# sneedchat

./: .gitattributes  .gitignore  Cargo.toml  Dioxus.toml  LICENSE.txt  flake.nix
.forgejo/workflows/: rust.yml  security.yml
lib/bonfire/: Cargo.toml
lib/bonfire/src/: channel.rs  event.rs  manager.rs  netlayer.rs  portal.rs  session.rs
lib/troposphere/: Cargo.toml
lib/troposphere-lib/: Cargo.toml
lib/troposphere-lib/src/: event.rs  input.rs  lib.rs  netlayer.rs  portal.rs  user.rs
lib/troposphere-lib/src/input/: command.rs
lib/troposphere-lib/src/manager/: builder.rs
lib/troposphere/src/: channel.rs  manager.rs  netlayer.rs  portal.rs  user.rs
lib/troposphere/src/manager/: builder.rs
src/: chat.rs  cli.rs  gui.rs  main.rs  netlayer.rs
src/chat/: channel.rs  event.rs  inbox.rs  input.rs  netlayer.rs  outbox.rs  portal.rs  session.rs  user.rs
src/chat/input/: command.rs
