[package]
name = "sneedchat"
version = "0.1.0"
edition = "2021"

[dependencies]
# meta
tracing = "^0.1"
tracing-subscriber = { version = "^0.3", features = [
  "time",
  "env-filter",
  "parking_lot",
  "local-time",
  "json",
] }
time = { version = "^0.3", features = ["formatting", "local-offset", "macros"] }
thiserror = "^1"

# chat
ed25519-dalek = { version = "^2.1", features = ["rand_core"] }
uuid = { version = "^1.7", features = ["fast-rng", "v4"] }
rand = { version = "^0.8" }
dashmap = { version = "^5.5" }

# captp
rexa = { path = "/home/ash/projects/lib/rexa", default-features = false, features = [
  "tokio",
  "extra-diagnostics",
  "netlayer-datastream",
  "netlayer-onion",
  "netlayer-mock",
] }
syrup = { path = "/home/ash/projects/lib/rexa/lib/syrup", features = [] }
futures = { version = "^0.3" }
tokio = { version = "^1.36", features = [
  "rt-multi-thread",
  "net",
  "time",
  "sync",
  "signal",
  "parking_lot",
  "tracing",
  "macros",
] }

# ui
clap = { version = "^4.5", features = ["derive", "env"] }
## gui
dioxus = { version = "0.5.0-alpha.0", optional = true }

[features]
default = ["gui-desktop"]
gui = ["dep:dioxus"]
gui-desktop = ["gui", "dioxus/desktop"]
# gui-web = [ "gui", "dioxus/web" ]
# egui = [ "dep:eframe", "dep:egui_extras", "dep:egui" ]
