[package]
name = "troposphere-lib"
version = "0.1.0"
edition.workspace = true
authors.workspace = true
repository.workspace = true
license-file.workspace = true

[dependencies]
tracing.workspace = true
thiserror.workspace = true

# chat
ed25519-dalek.workspace = true
uuid.workspace = true
rand.workspace = true
dashmap.workspace = true

# captp
rexa.workspace = true
syrup.workspace = true

futures.workspace = true
parking_lot.workspace = true


[target.'cfg(not(target_family = "wasm"))'.dependencies]
tokio = { workspace = true, features = ["signal", "parking_lot"] }

[target.'cfg(target_family = "wasm")'.dependencies]
tokio = { workspace = true, features = [] }

[lints]
workspace = true
